GNOME Bugzilla – Bug 707953
secret agent doesn't work when gnome-shell without networkmanager support is running
Last modified: 2015-06-11 01:30:15 UTC
Gnome Shell can be built without networkmanager support and then nm-applet is the only chance to supply connection credentials (until nmcli is ready for that). Unfortunately, nm-applet doesn't detect the presence of a secret agent but rather detects gnome-shell.
nm-applet is no longer autostarted under GNOME, so we could just remove the shell-detecting code now
I'll post a patch for that then, unless anyone is quicker than me.
Created attachment 277064 [details] [review] patch to stop checking for gnome shell A bit late (not using Gnome 3 any more) but here it is. This can help people who run Gnome 3 without network-indicator who prefer to use nm-applet.
I think in general, nm-applet should just work -- even in the presence of other NM clients. So, I agree with this patch. I think, we could also completely remove: src/shell-watcher.c src/shell-watcher.h
(In reply to comment #4) > I think, we could also completely remove: > > src/shell-watcher.c > src/shell-watcher.h +1
Patch looks OK, but please don't remove the parts for "--shell-debug" support, since that's critical to debugging the applet when also running GNOME Shell. GNOME Shell has a blacklist for notification area applets, and nm-applet is in that list because it conflicts with GNOME shell's agent. So unless we keep the shell-debug bits, when running the applet under the shell so that we can develop/debug it, theres no way to click on the applet or get it to show up. Using --shell-debug you can see it in the notification area in the lower-right corner.
Created attachment 291279 [details] [review] patch to avoid checking for gnome shell version I'm not sure how the --shell-debug code works, so please let me know if I got it wrong.
Pushed with some fixups for removal of shell-watcher.*. 4473e6a48fcfda1d87d4a4bc9f5c0589235dcfe0 applet: don't check for gnome shell (bgo #707953)
2014927869cb92be2c9e360f1a6a4b118b866403 build: fix build after "applet: don't check for gnome shell (bgo #707953)"
I started having this issue again recently. Ubuntu 15.04 worked fine for vpnc connections via the Network Manager from early April until about 2015-05-27, when this bug started effecting me again: https://bugs.launchpad.net/ubuntu/+source/network-manager-vpnc/+bug/1459350